test/pass/enunciado/hello.min
program

start
  if 1 then
    "IF\n"!
  else
    "ELSE\n"!
  fi

  if 0 then
    "NOPE\n"!
  fi
end
