test/fail/invalid_stop.min
program
start
if 0 = 0 then
stop
fi
end
